package com.dashplaygrounds.boardwall.models;

import java.time.ZonedDateTime;

import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@ToString
@Getter
@Setter
@Table(name = "categories")
@Entity
public class Category {
    @Id
    private Long id;
    private String name;
    private Integer position;
    private Long boardWallId;
    private ZonedDateTime createdAt;
    private ZonedDateTime updatedAt;
}
