package com.dashplaygrounds.boardwall.models;

import java.time.ZonedDateTime;

import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@ToString
@Getter
@Setter
@Table(name = "user_accounts")
@Entity
public class UserAccount {
    @Id
    private Long id;
    private String username;
    private String email;
    private String passwordHash;
    private ZonedDateTime createdAt;
    private ZonedDateTime updatedAt;
}
