@startuml

' Define UserAccount entity
class UserAccount {
    +id: Long
    +username: String
    +email: String
    +passwordHash: String
    +createdAt: ZonedDateTime
    +updatedAt: ZonedDateTime
}

' Define BoardWall entity
class BoardWall {
    +id: Long
    +name: String
    +sharedAccounts: List<String>
    +description: String
    +userAccountId: Long
    +createdAt: ZonedDateTime
    +updatedAt: ZonedDateTime
}

' Define Column entity
class Category {
    +id: Long
    +name: String
    +position: Integer
    +boardWallId: Long
    +createdAt: ZonedDateTime
    +updatedAt: ZonedDateTime
}

' Define Board entity
class Board {
    +id: Long
    +name: String
    +description: String
    +categoryId: Long
    +createdAt: ZonedDateTime
    +updatedAt: ZonedDateTime
}

' Define StickyNote entity
class StickyNote {
    +id: Long
    +content: String
    +color: String
    +position: HashMap<Float,Float>
    +boardId: Long
    +createdAt: ZonedDateTime
    +updatedAt: ZonedDateTime
}

class CanvasEditor {
    +id: Long
}

' Define relationships
UserAccount "1..*" -- "1..*" BoardWall : accesses
BoardWall "1" -- "1..*" Category : contains
Category "1" -- "1..*" Board : contains
Board "1" -- "0..*" StickyNote : contains

CanvasEditor "1" -- "1..*" Board : displays

@enduml